--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+#Database specific properties will be read from below profile.
+spring.profiles.active=prod
 
+#Logging Properties
+logging.level.org.springframework=WARN
+#Log level controlled in individual profile
+#logging.file.name=./logs/delegate.log
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - [%thread] %-5level %logger{36} -%msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# Tomcat server threads
+server.tomcat.max-threads=300
+
+# Metrics
+management.endpoints.web.exposure.include=prometheus,health
