Sample springboot app

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,9 @@
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/postgres
+spring.datasource.url=jdbc:postgresql://postgres:5432/postgresdb
+#spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/postgres
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.username=postgresadmin
+spring.datasource.password=admin123
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 logging.level.com.psl=DEBUG
