--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Database specific properties will be read from below profile.
-spring.profiles.active=prod
+spring.profiles.active=openshift
 
 #Logging Properties
 logging.level.org.springframework=WARN
